Fixes for better Ndx support.